--- a/Front/pages/update.html
+++ b/Front/pages/update.html
@@ -35,6 +35,6 @@
             </div>
         </div>
     </main>
-    <script type="module" src="main2.js"></script>
+    <script type="module" src="/Backend/View/main2.js"></script>
 </body>
 </html>
