--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
 
     </footer>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="Backend/View/main.js"></script>
 </body>
 
 </html>
