add: añadiendo actualizaciones

--- a/Front/pages/update.html
+++ b/Front/pages/update.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Product</title>
     <link rel="stylesheet" href="/Front/Css/reset.css">
-    <link rel="stylesheet" href="/Front/Css/styles.css">
+    <link rel="stylesheet" href="/Front/Css/stylesUpdate.css">
 </head>
 <header>
     <H1>ALURAGEEK</H1>
-    <button><a href="/index.html">Volver a la página principal</a></button>
+   
 </header>
 <body>
     <main>
-        <div>
+        <a href="/index.html"><button class="btn-returnMain">Volver a la página principal</button></a>
+        <div data-ex>
             <div class="data-container" data-container>
                 <div class="containerForm">
                     <form id="productForm" data-update>
